force-app/main/default/objects/SFDC_Application__c/fields/First_Candidate_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Candidate_Contact__c</fullName>
    <inlineHelpText>Please enter a date when the candidate was first contacted</inlineHelpText>
    <label>First Candidate Contact</label>
    <type>Date</type>
</CustomField>