force-app/main/default/objects/SFDC_Application__c/fields/SFDC_Candidate__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>SFDC_Candidate__c</referenceTo>
    <relationshipName>R00N50000001ijeLEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>