force-app/main/default/objects/SFDC_Application__c/fields/SFDC_Position__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>SFDC_Position__c</referenceTo>
    <relationshipName>R00N50000001ijebEAA</relationshipName>
    <type>Lookup</type>
</CustomField>