force-app/main/default/objects/SFDC_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need to Contact Applicant</fullName>
                <default>true</default>
                <label>Need to Contact Applicant</label>
            </value>
            <value>
                <fullName>Applicant Contacted</fullName>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Extended Verbal Offer</fullName>
            </value>
            <value>
                <fullName>Extended Offer Letter</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Candidate Hired!</fullName>
            </value>
            <value>
                <fullName>X - Not the Best Fit</fullName>
            </value>
            <value>
                <fullName>X - Offer Declined</fullName>
            </value>
            <value>
                <fullName>X - Candidate not interested</fullName>
            </value>
            <value>
                <fullName>X - No Longer Pursuing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>